# CellProfiler_GaussianProxy_analyses

./: .gitignore  compare_true_vs_artificial_trajectories.ipynb  gen_biotine.cppipe  gen_biotine.cpproj  pad_zeros.py  plot_trajectories.ipynb  process_true_trajectories.ipynb  pyproject.toml  quick_gen_pipeline.sh  run_cellprofiler_pipeline_in_parallel.py  track_nuclei_measure_size_shape.cppipe  track_nuclei_measure_size_shape.cpproj  true_biotine.cppipe  true_biotine.cpproj
